# open-pos

./: .gitignore  CMakeLists.txt  readme.md
src/cpp/: main.cpp
src/cpp/config/: ConfigController.cpp  ConfigController.h
src/cpp/model/: Product.cpp  Product.h
src/cpp/ui/: EditProductDialog.cpp  EditProductDialog.h  MainWindow.cpp  MainWindow.h
